[project]
name = "shadowaudit"
version = "0.1.0"
description = "ShadowAudit Python project"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
    "detect-secrets>=1.5.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
]

[project.scripts]
shadowaudit = "shadowaudit.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
